# RcloneBrowser

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  install.ps1  install.sh
.github/workflows/: build.yml
assets/: rclone-browser.appdata.xml
scripts/: rclone-browser-win-installer.iss  release_windows.cmd
src/: CMakeLists.txt  check_dialog.cpp  check_dialog.h  dedupe_dialog.cpp  dedupe_dialog.h  delete_progress_dialog.h  export_dialog.cpp  export_dialog.h  file_dialog.cpp  file_dialog.h  global.h  hours_spinbox.h  icon_cache.cpp  icon_cache.h  item_model.cpp  item_model.h  job_options.cpp  job_widget.cpp  job_widget.h  job_widget.ui  list_of_job_options.cpp  main.cpp  main_window.cpp  main_window.h  minutes_spinbox.h  mount_dialog.cpp  mount_dialog.h  mount_widget.cpp  mount_widget.h  mount_widget.ui  osx_helper.h  pch.h  preferences_dialog.cpp  preferences_dialog.h  preferences_dialog.ui  progress_dialog.h  remote_folder_dialog.cpp  remote_folder_dialog.h  remote_widget.cpp  remote_widget.h  (+9 more)
